# axum-playground

./: .env.sample  Cargo.toml  notes.md
entity/: Cargo.toml
entity/src/: users.rs
migration/src/: m20240821_174402_users.rs
migrations/: 20240810144740_create_notes_table.up.sql
src/: handler.rs  main.rs  model.rs  routes.rs
src/controllers/: mod.rs  notes.rs  users.rs
src/handlers/: auth_handler.rs  health_handler.rs  mod.rs  notes_handler.rs  users_handler.rs
src/models/: user_model.rs
src/types/: auth_types.rs  error_types.rs  mod.rs  users_types.rs
src/utils/: constants.rs  guards.rs  jwt.rs  mod.rs
