[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = {version = "0.7.5", features = ["multipart"]}
dotenv = "0.15.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
lazy_static = "1.5.0"
thiserror = "1.0.63"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
